# incubator-teaclave-trustzone-sdk

examples/add_int-rs/: uuid.txt
examples/add_int-rs/host/: Cargo.toml  Makefile
examples/add_int-rs/host/src/: main.rs
examples/add_int-rs/proto/src/: lib.rs
examples/add_int-rs/ta/: Cargo.toml
examples/add_int-rs/ta/src/: main.rs
